--- a/source/styles/sections/nav.scss
+++ b/source/styles/sections/nav.scss
@@ -1,9 +1,9 @@
 .menu {
   margin-top: 0;
   text-align: left;
-  margin-left: 24px;
-  background: #ff00b8e6;
-  padding: 45px 60px 120px;
+  margin-left: 288px;
+  background: #d83f87;
+  padding: 70px 72px 50px;
   line-height: 1rem;
 }
 
@@ -77,7 +77,7 @@
 
   &:hover,
   &--active{
-    color: #de2b24;
+    color: #424242;
   }
 
   @media (max-width: 1080px) {
