--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -9,7 +9,7 @@ html(lang="ru")
 
         body
             include sections/header
-            include sections/hero
+            //include sections/hero
             include sections/about
             include sections/approach
             include sections/work
