--- a/source/templates/sections/header.pug
+++ b/source/templates/sections/header.pug
@@ -11,4 +11,5 @@ header.header
                 //a.logo: img.logo__picture(src="images/logo.png" alt="logo")
             include contacts
             include nav
+        include hero
 
