--- a/source/templates/sections/hero.pug
+++ b/source/templates/sections/hero.pug
@@ -1,4 +1,11 @@
 section.hero
-    .hero__about We Providing
-    h1.hero__title Social Media marketing for businesses
-    a.button.button--yellow.button--text-uppercase(href="#contact") Free consultation
+    .hero__about M-Time
+    h1 онлайн обучения медитации
+    h2.hero__title 25 июня - 2 июля 2018
+        br
+        | 8 дней практики
+        br
+        | 8 простых техник медитации
+        br
+        | 8 прямых эфиров с Аленой Вишневской
+    a.button.button--yellow.button--text-uppercase(href="#contact") Записаться
