--- a/source/templates/sections/nav.pug
+++ b/source/templates/sections/nav.pug
@@ -6,11 +6,16 @@ nav#menu.menu
         span
 
     div.menu__links
-        a.nav__link.nav__link--active(href="/")  Home
-        a.nav__link(href="#about")  About us
-        a.nav__link(href="#approach")  Our Approach
-        a.nav__link(href="#work")  Our Work
-        a.button.header__button.button--red(href="#contact") Free Consultation
+        a.nav__link.nav__link--active(href="#about") О курсе
+        a.nav__link(href="#price") Стоимость
+        a.nav__link(href="#how") Формат курса
+        a.nav__link(href="#program") Программа обучение
+        a.nav__link(href="#info") Информация
+        a.nav__link(href="#coach") О тренере
+        a.nav__link(href="#guarantees") Гарантии
+        a.nav__link(href="#testimonials") Отзывы
+        a.nav__link(href="#faq") FAQ
+        a.button.header__button.button--call(href="#contact") Обратный звонок
 
 //- var items = ['Home', 'About us', 'Our Approach', 'Our work']
 //- var dataItems = ['header', 'about', 'approach', 'work']
