--- a/source/styles/global/button.scss
+++ b/source/styles/global/button.scss
@@ -6,9 +6,13 @@
   color: #ffffff;
 }
 
-.button--red {
-  margin-right: 3px;
-  background: #de2b24;
+.button--call {
+  font-family: $ff-main-bold;
+  background: transparent;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  padding: 15px 30px;
+  margin-top: 20px;
   transition: 0.3s;
 
   @media (max-width: 1080px) {
@@ -18,7 +22,8 @@
   }
 
   &:hover {
-    background: lighten(#de2b24, 7%);
+    background: #ffffff96;
+    color: #424242;
   }
 }
 
