--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,23 +1,28 @@
 .header {
+  position: relative;
   min-height: 59px;
-  background: #ccc url(http://m-time.online/img/bg_promo.jpg) center/cover no-repeat;
+  background: linear-gradient(90deg,
+                  rgba(132, 100, 165, 0.4),
+                  rgba(215, 63, 135, 0.4)
+  ), url(http://m-time.online/img/bg_promo.jpg) center/cover no-repeat;
   padding-bottom: 100px;
 
   &__top {
     display: flex;
     justify-content: normal;
+    padding-bottom: 60px;
 
     .logo {
       padding-top: 15px;
       font-family: $ff-main-bold;
       text-align: right;
       line-height: 1.5rem;
-      margin-right: 27px;
+      margin-right: 100px;
     }
 
     .logo__text {
       font-size: 1.8rem;
-      color: #ff00b8e6;
+      color: #d83f87;
     }
 
     .logo__text_time {
@@ -25,26 +30,9 @@
       color: #fff;
     }
   }
-
-  /*&__bottom {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 41px 0 32px;
-
-    @media (max-width: 1080px) {
-      flex-direction: row;
-    }
-
-    @media (max-width: 499px) {
-      flex-direction: column;
-    }
-  }*/
 }
 
 .contacts {
-  text-align: center;
   padding-top: 15px;
 
   @media (max-width: 1030px) {
@@ -55,7 +43,7 @@
 .contact {
   display: inline-block;
   vertical-align: top;
-  padding: 12px 15px 8px;
+  padding: 12px 10px 8px;
   color: #fff;
   transition: 0.3s;
 
@@ -90,8 +78,6 @@
   background-color: #1287bf;
   color: #fff;
 }
-
-
 
 /*.logo__img {
   margin-right: 20px;
