--- a/source/templates/sections/hero.pug
+++ b/source/templates/sections/hero.pug
@@ -3,9 +3,10 @@ section.hero
     h1 онлайн обучения медитации
     h2.hero__title 25 июня - 2 июля 2018
         br
-        | 8 дней практики
+        |
+    h3 8 дней практики
         br
         | 8 простых техник медитации
         br
         | 8 прямых эфиров с Аленой Вишневской
-    a.button.button--yellow.button--text-uppercase(href="#contact") Записаться
+    a.button.button--pink.button--text-uppercase(href="#contact") Записаться
