--- a/source/styles/global/button.scss
+++ b/source/styles/global/button.scss
@@ -1,7 +1,5 @@
 .button {
   display: inline-block;
-  border-radius: 3px;
-  padding: 10px 22px 7px;
   text-decoration: none;
   color: #ffffff;
 }
@@ -15,23 +13,18 @@
   margin-top: 20px;
   transition: 0.3s;
 
-  @media (max-width: 1080px) {
-    margin: 0;
-    display: block;
-    text-align: center;
-  }
-
   &:hover {
     background: #ffffff96;
     color: #424242;
   }
 }
 
-.button--yellow {
-  background: #f8cd53;
+.button--pink {
+  background: #e26fa5;
+  border-bottom: 2px solid #d83f87;
 
   &:hover {
-    background: lighten(#f8cd53, 7%);
+    background: lighten(#e26fa5, 7%);
   }
 }
 
