--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -5,19 +5,23 @@
                   rgba(132, 100, 165, 0.4),
                   rgba(215, 63, 135, 0.4)
   ), url(http://m-time.online/img/bg_promo.jpg) center/cover no-repeat;
-  padding-bottom: 100px;
+  padding-bottom: 150px;
 
   &__top {
     display: flex;
-    justify-content: normal;
+    flex-wrap: wrap;
     padding-bottom: 60px;
 
     .logo {
       padding-top: 15px;
       font-family: $ff-main-bold;
+      line-height: 1;
+      margin-right: 50px;
       text-align: right;
-      line-height: 1.5rem;
-      margin-right: 100px;
+
+      @media (max-width: 1500px) {
+        margin-right: 50px;
+      }
     }
 
     .logo__text {
@@ -33,10 +37,10 @@
 }
 
 .contacts {
-  padding-top: 15px;
+  padding-top: 35px;
 
-  @media (max-width: 1030px) {
-    margin-right: 10px;
+  @media (max-width: 650px) {
+    padding-top: 12px;
   }
 }
 
@@ -47,13 +51,21 @@
   color: #fff;
   transition: 0.3s;
 
+  @media (max-width: 650px) {
+    display: block;
+  }
+
+  @media (max-width: 500px) {
+    display: none;
+  }
+
   &__text {
     font-size: 0.9rem;
     letter-spacing: -0.3px;
   }
 
   &:hover {
-    color: lighten(#424242, 20%);
+    color: #424242;
   }
 
   &__icon {
@@ -92,8 +104,8 @@
     margin-left: 20px;
   }
 
-  @media (max-width: 500px) {
-    margin-bottom: 15px;
+  @media (max-width: 499px) {
+    margin-left: 20px;
   }
 }
 
