add section, create menu, change color

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -14,8 +14,8 @@
 @import "sections/nav";
 @import "sections/hero";
 @import "sections/about";
-@import "sections/approach";
-@import "sections/work";
-@import "sections/form";
+@import "sections/program";
+@import "sections/coach";
+@import "sections/faq";
 @import "sections/footer";
 @import "sections/title";
