--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -5,15 +5,20 @@ html(lang="ru")
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport' content='width=device-width')
         link(rel='stylesheet' href='css/main.min.css')
-        title Maditation
+        title Meditation
 
         body
             include sections/header
-            //include sections/hero
             include sections/about
-            include sections/approach
-            include sections/work
-            include sections/form
+            include sections/price
+            include sections/how
+            include sections/program
+            include sections/info
+            include sections/coach
+            include sections/guarantees
+            include sections/testimonials
+            include sections/price
+            include sections/faq
             include sections/footer
 
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
