--- a/source/templates/sections/faq.pug
+++ b/source/templates/sections/faq.pug
@@ -1,7 +1,7 @@
-section.form__section#contact
+section.form__section#faq
     .container
         .title
-            h2.title__header Get Your Free Facebook Analysis Now
+            h2.title__header FAQ
             .title__text Enter your details below
 
         .btn-down: a.arrow-down(href="form.html" target="_blank"): i.fa.fa-angle-down
