--- a/source/templates/sections/how.pug
+++ b/source/templates/sections/how.pug
@@ -1,7 +1,7 @@
-section#approach.approach
+section#how.approach
     .container
         .title.title--with-bottom-line
-            h2.title__header Our Approach
+            h2.title__header Формат курса
             .title__text Check Our approches step by step (how we do it)
 
         ul.approach__list
