--- a/source/templates/sections/price.pug
+++ b/source/templates/sections/price.pug
@@ -1,7 +1,7 @@
-section#about.about
+section#price.about
     .container
         .title.title--with-bottom-line
-            h2.title__header О курсе
+            h2.title__header Стоимость
             .title__text We are added out major Services
         ul.about__list
             li.about__item
