--- a/source/templates/sections/testimonials.pug
+++ b/source/templates/sections/testimonials.pug
@@ -1,7 +1,7 @@
-section.work#work
+section.work#testimonials
     .container
         .title.title--with-bottom-line
-            h2.title__header Our work
+            h2.title__header Отзывы
             .title__text We are added featured works below
 
         ul.work__list
