--- a/source/styles/global/button.scss
+++ b/source/styles/global/button.scss
@@ -1,30 +1,31 @@
 .button {
   display: inline-block;
   text-decoration: none;
-  color: #ffffff;
+  color: #cad8c5;
 }
 
 .button--call {
   font-family: $ff-main-bold;
   background: transparent;
-  border: 1px solid #fff;
+  border: 1px solid #cad8c5;
   border-radius: 50px;
   padding: 15px 30px;
   margin-top: 20px;
   transition: 0.3s;
 
   &:hover {
-    background: #ffffff96;
-    color: #424242;
+    background: #cad8c5;
+    color: #5a8a8a;
   }
 }
 
-.button--pink {
-  background: #e26fa5;
-  border-bottom: 2px solid #d83f87;
+.button--blue {
+  background: #cad8c5;
+  border-bottom: 2px solid #5a8a8a;
+  color: #974d26;
 
   &:hover {
-    background: lighten(#e26fa5, 7%);
+    background: #b8ccc6;
   }
 }
 
