--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -17,8 +17,8 @@
     font-size: 1.25rem;
     font-family: $ff-main-light;
 
-    @media (max-width: 515px) {
-      padding: 0 20px 0 20px;
+    @media (max-width: 980px) {
+      padding: 15px 30px;
     }
   }
 
