--- a/source/templates/sections/about.pug
+++ b/source/templates/sections/about.pug
@@ -2,25 +2,35 @@ section#about.about
     .container
         .title.title--with-bottom-line
             h2.title__header О курсе
-            .title__text We are added out major Services
+            .title__text 8-дневный онлайн-курс обучения медитации под руководством эксперта по медитациям
+                br
+                | Техники медитации, которые сможет освоить даже новичок
+                br
+                | Медитации в прямом эфире
+                br
+                | Без религии, философии и эзотерики
+                br
+                | Уникальная программа обучения медитации, аналогов которой нет
         ul.about__list
             li.about__item
-                .icon.icon-like
-                h3.about__header Facebook Marketing
+                .icon.icon-study
+                h3.about__header Опыт
                 p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                    За 8 дней вы научитесь с помощью понятных техник медитации сбрасывать напряжение, восстанавливаться
+                    и эффективно отдыхать, перезагружаться, работать с эмоциями, находить контакт с собой,
+                    фокусироваться на важном.
 
             li.about__item
                 .icon.icon-book
-                h3.about__header.about__header-book landing pages Creation
+                h3.about__header.about__header-book Знания
                 p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                    Идеальная пропорция теоретических знаний о медитации, о специфике применения, о влиянии на
+                    физическое, эмоциональное здоровье и практический опыт использования техник медитации в
+                    повседневной жизни.
 
             li.about__item
                 .icon.icon-message
-                h3.about__header.about__header-message Ads management
+                h3.about__header.about__header-message Возможности
                 p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                    Вы получите целый набор работающих техник медитации, которые можно комбинировать и применять
+                    самостоятельно, исходя из вашего ритма жизни и задач, которые необходимо решать каждый день.
