--- a/source/styles/global/sprite.scss
+++ b/source/styles/global/sprite.scss
@@ -11,53 +11,53 @@
 // $spritesheet: width height image $spritesheet-sprites;
 $book-name: 'book';
 $book-x: 0px;
-$book-y: 81px;
+$book-y: 0px;
 $book-offset-x: 0px;
-$book-offset-y: -81px;
-$book-width: 66px;
-$book-height: 79px;
-$book-total-width: 167px;
-$book-total-height: 160px;
+$book-offset-y: 0px;
+$book-width: 100px;
+$book-height: 100px;
+$book-total-width: 200px;
+$book-total-height: 200px;
 $book-image: '../images/sprite.png';
-$book: (0px, 81px, 0px, -81px, 66px, 79px, 167px, 160px, '../images/sprite.png', 'book', );
-$like-name: 'like';
-$like-x: 84px;
-$like-y: 0px;
-$like-offset-x: -84px;
-$like-offset-y: 0px;
-$like-width: 83px;
-$like-height: 79px;
-$like-total-width: 167px;
-$like-total-height: 160px;
-$like-image: '../images/sprite.png';
-$like: (84px, 0px, -84px, 0px, 83px, 79px, 167px, 160px, '../images/sprite.png', 'like', );
-$message-name: 'message';
-$message-x: 0px;
-$message-y: 0px;
-$message-offset-x: 0px;
-$message-offset-y: 0px;
-$message-width: 84px;
-$message-height: 81px;
-$message-total-width: 167px;
-$message-total-height: 160px;
-$message-image: '../images/sprite.png';
-$message: (0px, 0px, 0px, 0px, 84px, 81px, 167px, 160px, '../images/sprite.png', 'message', );
+$book: (0px, 0px, 0px, 0px, 100px, 100px, 200px, 200px, '../images/sprite.png', 'book', );
+$planet-name: 'planet';
+$planet-x: 100px;
+$planet-y: 0px;
+$planet-offset-x: -100px;
+$planet-offset-y: 0px;
+$planet-width: 100px;
+$planet-height: 100px;
+$planet-total-width: 200px;
+$planet-total-height: 200px;
+$planet-image: '../images/sprite.png';
+$planet: (100px, 0px, -100px, 0px, 100px, 100px, 200px, 200px, '../images/sprite.png', 'planet', );
+$study-name: 'study';
+$study-x: 0px;
+$study-y: 100px;
+$study-offset-x: 0px;
+$study-offset-y: -100px;
+$study-width: 100px;
+$study-height: 100px;
+$study-total-width: 200px;
+$study-total-height: 200px;
+$study-image: '../images/sprite.png';
+$study: (0px, 100px, 0px, -100px, 100px, 100px, 200px, 200px, '../images/sprite.png', 'study', );
 $work-item-name: 'work-item';
-$work-item-x: 66px;
-$work-item-y: 81px;
-$work-item-offset-x: -66px;
-$work-item-offset-y: -81px;
+$work-item-x: 100px;
+$work-item-y: 100px;
+$work-item-offset-x: -100px;
+$work-item-offset-y: -100px;
 $work-item-width: 36px;
 $work-item-height: 37px;
-$work-item-total-width: 167px;
-$work-item-total-height: 160px;
+$work-item-total-width: 200px;
+$work-item-total-height: 200px;
 $work-item-image: '../images/sprite.png';
-$work-item: (66px, 81px, -66px, -81px, 36px, 37px, 167px, 160px, '../images/sprite.png', 'work-item', );
-$spritesheet-width: 167px;
-$spritesheet-height: 160px;
+$work-item: (100px, 100px, -100px, -100px, 36px, 37px, 200px, 200px, '../images/sprite.png', 'work-item', );
+$spritesheet-width: 200px;
+$spritesheet-height: 200px;
 $spritesheet-image: '../images/sprite.png';
-$spritesheet-sprites: ($book, $like, $message, $work-item, );
-$spritesheet: (167px, 160px, '../images/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($book, $planet, $study, $work-item, );
+$spritesheet: (200px, 200px, '../images/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
