--- a/source/styles/sections/about.scss
+++ b/source/styles/sections/about.scss
@@ -55,21 +55,9 @@
     font-size: 0.875rem;
     line-height: 1.5;
     color: #5c5c5c;
-  }
-}
 
-.icon-book {
-  margin-left: 88px;
-
-  @media (max-width: 980px) {
-    margin: auto auto 23px;
-  }
-}
-
-.icon-message {
-  margin: 5px 93px 16px auto;
-
-  @media (max-width: 980px) {
-    margin: auto;
+    @media (max-width: 980px) {
+      padding: 0 20px
+    }
   }
 }
