--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -10,6 +10,7 @@ html(lang="ru")
         body
             include sections/header
             include sections/about
+            include sections/get
             include sections/price
             include sections/how
             include sections/program
