--- a/source/templates/sections/about.pug
+++ b/source/templates/sections/about.pug
@@ -29,7 +29,7 @@ section#about.about
                     повседневной жизни.
 
             li.about__item
-                .icon.icon-message
+                .icon.icon-planet
                 h3.about__header.about__header-message Возможности
                 p.about__description.
                     Вы получите целый набор работающих техник медитации, которые можно комбинировать и применять
