--- a/source/templates/sections/get.pug
+++ b/source/templates/sections/get.pug
@@ -1,36 +1,52 @@
-section#about.about
+section.get
     .container
         .title.title--with-bottom-line
-            h2.title__header О курсе
-            .title__text 8-дневный онлайн-курс обучения медитации под руководством эксперта по медитациям
-                br
-                | Техники медитации, которые сможет освоить даже новичок
-                br
-                | Медитации в прямом эфире
-                br
-                | Без религии, философии и эзотерики
-                br
-                | Уникальная программа обучения медитации, аналогов которой нет
-        ul.about__list
-            li.about__item
-                .icon.icon-study
-                h3.about__header Опыт
-                p.about__description.
-                    За 8 дней вы научитесь с помощью понятных техник медитации сбрасывать напряжение, восстанавливаться
-                    и эффективно отдыхать, перезагружаться, работать с эмоциями, находить контакт с собой,
-                    фокусироваться на важном.
+            h2.title__header Что дает программа онлайн-обучения медитации
+        ul.get__list
+            li.get__item
+                .icon.icon-mind
+                p.get__description.
+                    Наводит порядок в голове, развивает умение расставлять приоритеты, четко осознавать, что важно и
+                    куда сфокусировать внимание и усилия
 
-            li.about__item
-                .icon.icon-book
-                h3.about__header.about__header-book Знания
-                p.about__description.
-                    Идеальная пропорция теоретических знаний о медитации, о специфике применения, о влиянии на
-                    физическое, эмоциональное здоровье и практический опыт использования техник медитации в
-                    повседневной жизни.
+            li.get__item
+                .icon.icon-smile
+                p.get__description.
+                    Возможность отслеживать эмоциональные реакции, осознавать их и при необходимости во время
+                    предотвращать конфликтные ситуации
 
-            li.about__item
-                .icon.icon-message
-                h3.about__header.about__header-message Возможности
-                p.about__description.
-                    Вы получите целый набор работающих техник медитации, которые можно комбинировать и применять
-                    самостоятельно, исходя из вашего ритма жизни и задач, которые необходимо решать каждый день.
+            li.get__item
+                .icon.icon-pointer
+                p.get__description.
+                    Формирует навык осознавать мыслительный поток и фокусировать его в нужном направлении, что повышает
+                    вашу эффективность и продуктивность
+
+            li.get__item
+                .icon.icon-people
+                p.get__description.
+                    Умение находить контакт с самим собой и окружающими людьми, открывает внутренний ресурс для
+                    реализации ваших желаний и целей
+
+            li.get__item
+                .icon.icon-stress
+                p.get__description.
+                    Возможность сбросить ментальное напряжение, восстановить нервную систему, расслабиться и эффективно
+                    отдохнуть за 10-20 минут в день
+
+            li.get__item
+                .icon.icon-watch
+                p.get__description.
+                    Развивает способность находиться в моменте, отслеживать привычные сценарии реакций, прорабатывать
+                    их и внедрять новые продуктивные схемы поведения
+
+            li.get__item
+                .icon.icon-shield
+                p.get__description.
+                    Развивает умение защищать себя от информационного мусора, влияния других людей и агрессивной
+                    внешней среды
+
+            li.get__item
+                .icon.icon-heart
+                p.get__description.
+                    Возможность обрести состояние потока и гармонии с окружающим миром регулярно используя практики
+                    медитации и концентрации внимания
