--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -14,6 +14,7 @@
 @import "sections/nav";
 @import "sections/hero";
 @import "sections/about";
+@import "sections/get";
 @import "sections/program";
 @import "sections/coach";
 @import "sections/faq";
