--- a/source/styles/sections/get.scss
+++ b/source/styles/sections/get.scss
@@ -1,6 +1,7 @@
-.about {
+.get {
   padding: 99px 0 105px 0;
   text-align: center;
+  background: #fdeacf;
 
   @media (max-width: 985px) {
     padding: 40px 0 20px 0;
@@ -20,7 +21,7 @@
   }
 
   &__item {
-    width: 27%;
+    width: 21%;
 
     @media (max-width: 980px) {
       width: 50%;
