change logo, add price section

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -15,6 +15,7 @@
 @import "sections/hero";
 @import "sections/about";
 @import "sections/get";
+@import "sections/price";
 @import "sections/program";
 @import "sections/coach";
 @import "sections/faq";
