--- a/source/styles/sections/hero.scss
+++ b/source/styles/sections/hero.scss
@@ -1,7 +1,5 @@
 .hero {
-  position: absolute;
-  top: 288px;
-  text-align: left;
+  text-align: center;
   color: #fff;
 
   @media (max-width: 1080px) {
