--- a/source/templates/sections/price.pug
+++ b/source/templates/sections/price.pug
@@ -1,26 +1,62 @@
-section#price.about
+section#price.price
     .container
         .title.title--with-bottom-line
-            h2.title__header Стоимость
-            .title__text We are added out major Services
-        ul.about__list
-            li.about__item
-                .icon.icon-like
-                h3.about__header Facebook Marketing
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+            h2.title__header Выберите свой формат
+            //.title__text We are added out major Services
+        ul.price__list
+            li.price__item
+                h3.price__header Пакет
+                    br
+                    | GOOD
+                .price__description 70% практики, 30% теории
+                    hr
+                    | Закрытая группа фб
+                    hr
+                    | 8 дней по 40 минут (30 практика + 10 теория)
+                    hr
+                    | Отчеты и обратная связь по практике
 
-            li.about__item
-                .icon.icon-book
-                h3.about__header.about__header-book landing pages Creation
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                h3.price__header 63 грн/день
+                .price__description 500 грн весь курс
+                    hr
+                    | 700 грн с 20.06
 
-            li.about__item
-                .icon.icon-message
-                h3.about__header.about__header-message Ads management
-                p.about__description.
-                    Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                    Standart dummy text ever
+                a.button.button--blue.button--text-uppercase(href="#") Записаться
+
+            li.price__item
+                h3.price__header Пакет
+                    br
+                    | BEST
+                .price__description Все из пакета "GOOD"
+                    hr
+                    | Совместные онлайн-медитации
+                    hr
+                    | Pdf-дневник медитации
+                    hr
+                    | Онлайн-разборы опыта практики
+
+                h3.price__header.total--best 188 грн/день
+                .price__description 1500 грн весь курс
+                    hr
+                    | 1800 грн с 20.06
+
+                a.button.button--blue.button--text-uppercase.button--best(href="#") Записаться
+
+            li.price__item
+                h3.price__header Пакет
+                    br
+                    | PREMIUM
+                .price__description Все из пакета "BEST"
+                    hr
+                    | Индивидуальный план медитаций
+                    hr
+                    | 2 часа дополнительных консультаций
+                    hr
+                    | 3 дополнительных бонуса
+
+                h3.price__header.total--premium 375 грн/день
+                .price__description 3000 грн весь курс
+                    hr
+                    | 3200 грн с 20.06
+
+                a.button.button--blue.button--text-uppercase(href="#") Записаться
