--- a/source/templates/sections/header.pug
+++ b/source/templates/sections/header.pug
@@ -2,14 +2,14 @@ header.header
     .container
         .header__top
 
-            a.logo
-                span.logo__text M
+            //a.logo
+                //span.logo__text M
                     br
-                    |
-                span.logo__text_time Time
+                    //|
+                //span.logo__text_time Time*/
 
-                //a.logo: img.logo__picture(src="images/logo.png" alt="logo")
+            a.logo: img.logo__picture(src="images/logo.png" alt="logo")
             include contacts
-            include nav
+            //include nav
         include hero
 
