add how section scss and pug

--- a/source/templates/sections/how.pug
+++ b/source/templates/sections/how.pug
@@ -1,50 +1,35 @@
-section#how.approach
+section#how.how
     .container
-        .title.title--with-bottom-line
+        .title.title--with-bottom-line-how
             h2.title__header Формат курса
-            .title__text Check Our approches step by step (how we do it)
 
-        ul.approach__list
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-1.jpg" alt="step-1")
-                    .approch__step step
-                .approach__text
-                    .approach__title Step 1: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+        ul.how__description
+            li 8 дней теории и практики
+            li Обязательные отчеты о практике в закрытой группе фейсбука
+            li Совместная онлайн-практика с Аленой Вишневской
+            li Доверительная атмосфера
+            li Индивидуальные комментарии эксперта по медитациям
+            li Постоянная обратная связь от преподавателя и участников
+            li На каждом онлайне лайфхаки по теории и практике медитаций
+            li Ежедневные разборы отчетов о практике каждого участника
+            li Бонусные рекомендации по индивидуальным особенностям участников
+            li Доступ в закрытую группу со всеми материалами по завершению курса
 
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-2.jpg" alt="step-2")
-                    .approach__step step
-                .approach__text
-                    .approach__title Step 2: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+        .how__title В программе идеально сочетаются:
 
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-3.jpg" alt="step-3")
-                    .approach__step step
-                .approach__text
-                    .approach__title Step 3: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+        ul.how__list
+            li.how__item
+                h3.how__header Теоретические знания
+                p.how__description_style.
+                    О медитации, чем отличается медитативное состояние и практика медитации, виды медитаций и их
+                    особенности, разбор самых популярных ошибок и иллюзий о медитации, техника безопасности, влияние
+                    медитации на организм, рекомендации к использованию и многое другое.
 
-            li.approach__item
-                .approach__image
-                    img.approach__picture(src="../images/step-4.jpg" alt="step-4")
-                    .approach__step step
-                .approach__text
-                    .approach__title Step 4: Heading Here
-                    p.approach__description.
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                        tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis
-                        nostrud exerci
+            li.how__item
+                h3.how__header Практический опыт
+                p.how__description_style.
+                    Практика 8 разных медитаций, разбор составляющих эффективной медитации, подготовка к
+                    практике и выход из медитации, разбор и непосредственное практическое переживание
+                    особенностей каждой из них, возможность попробовать и выбрать, какой вид медитации подходит
+                    именно вам и т. д.
+
