--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -16,6 +16,7 @@
 @import "sections/about";
 @import "sections/get";
 @import "sections/price";
+@import "sections/how";
 @import "sections/program";
 @import "sections/coach";
 @import "sections/faq";
