--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -1,6 +1,5 @@
 .header {
   position: relative;
-  min-height: 700px;
   padding-bottom: 150px;
 
   &:before {
@@ -29,30 +28,18 @@
       padding-top: 15px;
       font-family: $ff-main-bold;
       line-height: 1;
-      margin-right: 50px;
       text-align: right;
 
-      @media (max-width: 1080px) {
-        margin-left: 20px;
+      & img {
+        width: 60%;
+
+        @media (max-width: 430px) {
+          width: 20%;
+        }
       }
-
-      @media (max-width: 381px) {
-        margin: auto;
-        text-align: right;
-      }
     }
 
-    .logo__text {
-      font-size: 1.8rem;
-      color: #974d26;
-    }
-
-    .logo__text_time {
-      font-size: 3rem;
-      color: #5a8a8a;
-    }
-
-    @media (max-width: 381px) {
+    @media (max-width: 430px) {
       display: block;
       padding-top: 20px;
       text-align: center;
@@ -62,9 +49,14 @@
 
 .contacts {
   padding-top: 35px;
+  margin-left: 50px;
 
   @media (max-width: 650px) {
     padding-top: 12px;
+  }
+
+  @media (max-width: 430px) {
+    margin: 0;
   }
 }
 
@@ -114,16 +106,3 @@
   background-color: #1287bf;
   color: #fff;
 }
-
-/*.logo__img {
-  margin-right: 20px;
-
-  & img {
-    width: 100%;
-  }
-}*/
-
-.logo {
-
-}
-
