--- a/source/styles/sections/title.scss
+++ b/source/styles/sections/title.scss
@@ -34,4 +34,17 @@
       background: #424242;
     }
   }
+
+  &--with-bottom-line-how {
+    position: relative;
+
+    &:after {
+      @include centerer-x();
+      content: '';
+      bottom: -16px;
+      width: 47px;
+      height: 5px;
+      background: #fdeacf;
+    }
+  }
 }
