--- a/source/styles/sections/header.scss
+++ b/source/styles/sections/header.scss
@@ -15,8 +15,7 @@
     background: linear-gradient(90deg,
             rgba(244, 202, 149, 0.6),
             rgba(151, 77, 38, 0.6)
-    ), url(../images/bg-header.jpg) right/cover no-repeat;;
-    transform: scale(-1, 1);
+    ), url(../images/bg-header.jpg) right/cover no-repeat;
   }
 
   &__top {
