--- a/source/templates/index.pug
+++ b/source/templates/index.pug
@@ -13,13 +13,13 @@ html(lang="ru")
             include sections/get
             include sections/price
             include sections/how
-            include sections/program
-            include sections/info
-            include sections/coach
-            include sections/guarantees
-            include sections/testimonials
+            //include sections/program
+            //include sections/info
+            //include sections/coach
+            //include sections/guarantees
+            //include sections/testimonials
             include sections/price
-            include sections/faq
+            //include sections/faq
             include sections/footer
 
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
